--- a/3-Machine_Learning/1-Supervisado/1-Regression/3-Regularization/Regularization_prostate_cancer.ipynb
+++ b/3-Machine_Learning/1-Supervisado/1-Regression/3-Regularization/Regularization_prostate_cancer.ipynb
@@ -1214,12 +1214,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The Lasso performs better than others methods (Elastic net: $\\alpha=1$). \n",
+    "* The Lasso performs better than others methods (Elastic net: $L1_{ratio}=1$, es decir, Lasso). \n",
     "* The Lasso is more parsimonious but there is likely to be a loss of accuracy.\n",
     "* The Elastic net can be tuned to outperform Lasso but it is more demanding in computational resources.\n",
-    "\n",
-    "**=> The Elastic net is a good trade-off for accuracy and computational cost balance between the Ridge regression and the Lasso**.\n",
-    "\n",
     "\n",
     "In order to optimize the model by fitting the optimal parameters, a cross validation can be performed.\n",
     "The functions sklearn.linear_model.RidgeCV, sklearn.linear_model.LassoCV and sklearn.linear_model.ElasticNetCV in Python perform an automatic tunning of hyperparameters for the Rigde regression, the Lasso and the Elastic Net respectively."
