--- a/3-Machine_Learning/2-Classification/4-Logistic_Regression/ejercicios/Logistic-regression predict-ad-click.ipynb
+++ b/3-Machine_Learning/2-Classification/4-Logistic_Regression/ejercicios/Logistic-regression predict-ad-click.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
     }
    ],
    "source": [
-    "#Cross Validation ¿?\n",
+    "#Cross Validation\n",
     "from sklearn.model_selection import cross_val_score\n",
     "print(cross_val_score(model2,X,y,cv=5,scoring=\"accuracy\"))"
    ]
