--- a/3-Machine_Learning/2-Classification/4-Logistic_Regression/ejercicios/Logistic-regression predict-ad-click.ipynb
+++ b/3-Machine_Learning/2-Classification/4-Logistic_Regression/ejercicios/Logistic-regression predict-ad-click.ipynb
@@ -1133,7 +1133,7 @@
     }
    ],
    "source": [
-    "#Cross Validation\n",
+    "#Cross Validation (Va a ser mejor representativo del error real)\n",
     "from sklearn.model_selection import cross_val_score\n",
     "scores = cross_val_score(model2,X_train,Y_train,cv=5,scoring=\"accuracy\") #Cachitos de 5\n",
     "print(scores)"
