--- a/3-Machine_Learning/3-RegorClass/8-SVM/ejercicios/Ejercicios_SVM.ipynb
+++ b/3-Machine_Learning/3-RegorClass/8-SVM/ejercicios/Ejercicios_SVM.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "        [1]], dtype=uint8)}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El accuracy score con C=1: 1.00\n"
+      "El accuracy score con C=1 es: 1.00\n"
      ]
     }
    ],
@@ -322,16 +322,23 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "# Creamos y entrenamos el SVM classifier\n",
-    "svm_classifier = SVC(kernel='linear',C=1, random_state=42) #con C=1\n",
+    "svm_classifier = SVC(kernel='linear',C=1, random_state=42) #con C=1 y con Kernel linear\n",
     "svm_classifier.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# Make predictions on the test set\n",
+    "#Hacemos la predicción\n",
     "y_pred = svm_classifier.predict(X_test_scaled)\n",
     "\n",
     "# Calculamos el accuracy score\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "print(f\"El accuracy score con C=1: {accuracy:.2f}\")"
+    "print(f\"El accuracy score con C=1 es: {accuracy:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "C=1 es muy permisivo por tanto, el outlier ha caido dentro del dataset del train"
    ]
   },
   {
@@ -348,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -400,13 +407,17 @@
     "\n",
     "# Visualizamos la frontera de decisión a continuación utilizando las dos primeras características\n",
     "def plot_decision_boundary(X, y, model, ax=None):\n",
-    "    h = .02\n",
+    "    h = .02 #define la granularidad de la cuadrícula\n",
     "    x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
+    "    #Se calculan los límites mínimos y máximos y añadimos un margen de 1\n",
     "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
     "                         np.arange(y_min, y_max, h))\n",
+    "    #Se crea una cuadrícula de puntos usando np.meshgrid para cubrir todo el espacio de características.\n",
     "    Z = model.predict(np.c_[xx.ravel(), yy.ravel()])\n",
+    "    #Se aplana la cuadrícula y se usa el modelo para predecir la clase de cada punto.\n",
     "    Z = Z.reshape(xx.shape)\n",
+    "    #Se reforman las predicciones para que coincidan con la forma de la cuadrícula original.\n",
     "    \n",
     "    if ax is None:\n",
     "        ax = plt.gca()\n",
@@ -423,7 +434,7 @@
     "\n",
     "# Evaluamos el rendimiento con diferentes valores de C\n",
     "C_values = [0.1, 1, 10, 100]\n",
-    "accuracies = []\n",
+    "accuracies = [] #Creamos una lista vacía de accuracies\n",
     "\n",
     "for C in C_values:\n",
     "    svm = SVC(kernel='linear', C=C, random_state=42)\n",
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1345,7 @@
        "        [1]], dtype=uint8)}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
