--- a/3-Machine_Learning/4-Pipelines/Hyperparameter_pipes.ipynb
+++ b/3-Machine_Learning/4-Pipelines/Hyperparameter_pipes.ipynb
@@ -5921,29 +5921,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install ydata-profiling"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting ydata-profiling\n",
+      "  Downloading ydata_profiling-4.12.0-py2.py3-none-any.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: scipy<1.14,>=1.4.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (1.13.1)\n",
+      "Requirement already satisfied: pandas!=1.4.0,<3,>1.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib<3.10,>=3.5 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (3.9.2)\n",
+      "Collecting pydantic>=2 (from ydata-profiling)\n",
+      "  Downloading pydantic-2.10.1-py3-none-any.whl.metadata (169 kB)\n",
+      "Collecting PyYAML<6.1,>=5.0.0 (from ydata-profiling)\n",
+      "  Downloading PyYAML-6.0.2-cp39-cp39-win_amd64.whl.metadata (2.1 kB)\n",
+      "Collecting jinja2<3.2,>=2.11.1 (from ydata-profiling)\n",
+      "  Downloading jinja2-3.1.4-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting visions<0.7.7,>=0.7.5 (from visions[type_image_path]<0.7.7,>=0.7.5->ydata-profiling)\n",
+      "  Downloading visions-0.7.6-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: numpy<2.2,>=1.16.0 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (2.0.2)\n",
+      "Collecting htmlmin==0.1.12 (from ydata-profiling)\n",
+      "  Downloading htmlmin-0.1.12.tar.gz (19 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting phik<0.13,>=0.11.1 (from ydata-profiling)\n",
+      "  Downloading phik-0.12.4-cp39-cp39-win_amd64.whl.metadata (5.6 kB)\n",
+      "Requirement already satisfied: requests<3,>=2.24.0 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (2.32.3)\n",
+      "Collecting tqdm<5,>=4.48.2 (from ydata-profiling)\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: seaborn<0.14,>=0.10.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (0.13.2)\n",
+      "Collecting multimethod<2,>=1.4 (from ydata-profiling)\n",
+      "  Downloading multimethod-1.12-py3-none-any.whl.metadata (9.6 kB)\n",
+      "Collecting statsmodels<1,>=0.13.2 (from ydata-profiling)\n",
+      "  Downloading statsmodels-0.14.4-cp39-cp39-win_amd64.whl.metadata (9.5 kB)\n",
+      "Collecting typeguard<5,>=3 (from ydata-profiling)\n",
+      "  Downloading typeguard-4.4.1-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Collecting imagehash==4.3.1 (from ydata-profiling)\n",
+      "  Downloading ImageHash-4.3.1-py2.py3-none-any.whl.metadata (8.0 kB)\n",
+      "Requirement already satisfied: wordcloud>=1.9.3 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from ydata-profiling) (1.9.3)\n",
+      "Collecting dacite>=1.8 (from ydata-profiling)\n",
+      "  Downloading dacite-1.8.1-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting numba<1,>=0.56.0 (from ydata-profiling)\n",
+      "  Downloading numba-0.60.0-cp39-cp39-win_amd64.whl.metadata (2.8 kB)\n",
+      "Collecting PyWavelets (from imagehash==4.3.1->ydata-profiling)\n",
+      "  Downloading pywavelets-1.6.0-cp39-cp39-win_amd64.whl.metadata (9.0 kB)\n",
+      "Requirement already satisfied: pillow in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from imagehash==4.3.1->ydata-profiling) (10.4.0)\n",
+      "Collecting MarkupSafe>=2.0 (from jinja2<3.2,>=2.11.1->ydata-profiling)\n",
+      "  Downloading MarkupSafe-3.0.2-cp39-cp39-win_amd64.whl.metadata (4.1 kB)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (1.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (4.54.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (1.4.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (24.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (3.1.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (2.9.0.post0)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib<3.10,>=3.5->ydata-profiling) (6.4.5)\n",
+      "Collecting llvmlite<0.44,>=0.43.0dev0 (from numba<1,>=0.56.0->ydata-profiling)\n",
+      "  Downloading llvmlite-0.43.0-cp39-cp39-win_amd64.whl.metadata (4.9 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from pandas!=1.4.0,<3,>1.1->ydata-profiling) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from pandas!=1.4.0,<3,>1.1->ydata-profiling) (2024.2)\n",
+      "Requirement already satisfied: joblib>=0.14.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from phik<0.13,>=0.11.1->ydata-profiling) (1.4.2)\n",
+      "Collecting annotated-types>=0.6.0 (from pydantic>=2->ydata-profiling)\n",
+      "  Downloading annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting pydantic-core==2.27.1 (from pydantic>=2->ydata-profiling)\n",
+      "  Downloading pydantic_core-2.27.1-cp39-none-win_amd64.whl.metadata (6.7 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.12.2 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from pydantic>=2->ydata-profiling) (4.12.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from requests<3,>=2.24.0->ydata-profiling) (3.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from requests<3,>=2.24.0->ydata-profiling) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from requests<3,>=2.24.0->ydata-profiling) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from requests<3,>=2.24.0->ydata-profiling) (2024.8.30)\n",
+      "Collecting patsy>=0.5.6 (from statsmodels<1,>=0.13.2->ydata-profiling)\n",
+      "  Downloading patsy-1.0.1-py2.py3-none-any.whl.metadata (3.3 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from tqdm<5,>=4.48.2->ydata-profiling) (0.4.6)\n",
+      "Requirement already satisfied: importlib-metadata>=3.6 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from typeguard<5,>=3->ydata-profiling) (8.5.0)\n",
+      "Collecting attrs>=19.3.0 (from visions<0.7.7,>=0.7.5->visions[type_image_path]<0.7.7,>=0.7.5->ydata-profiling)\n",
+      "  Downloading attrs-24.2.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting networkx>=2.4 (from visions<0.7.7,>=0.7.5->visions[type_image_path]<0.7.7,>=0.7.5->ydata-profiling)\n",
+      "  Downloading networkx-3.2.1-py3-none-any.whl.metadata (5.2 kB)\n",
+      "Requirement already satisfied: zipp>=3.20 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from importlib-metadata>=3.6->typeguard<5,>=3->ydata-profiling) (3.20.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\jonam\\appdata\\roaming\\python\\python39\\site-packages (from python-dateutil>=2.7->matplotlib<3.10,>=3.5->ydata-profiling) (1.16.0)\n",
+      "Downloading ydata_profiling-4.12.0-py2.py3-none-any.whl (390 kB)\n",
+      "Downloading ImageHash-4.3.1-py2.py3-none-any.whl (296 kB)\n",
+      "Downloading dacite-1.8.1-py3-none-any.whl (14 kB)\n",
+      "Downloading jinja2-3.1.4-py3-none-any.whl (133 kB)\n",
+      "Downloading multimethod-1.12-py3-none-any.whl (10 kB)\n",
+      "Downloading numba-0.60.0-cp39-cp39-win_amd64.whl (2.7 MB)\n",
+      "   ---------------------------------------- 0.0/2.7 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 2.7/2.7 MB 17.2 MB/s eta 0:00:00\n",
+      "Downloading phik-0.12.4-cp39-cp39-win_amd64.whl (666 kB)\n",
+      "   ---------------------------------------- 0.0/666.3 kB ? eta -:--:--\n",
+      "   --------------------------------------- 666.3/666.3 kB 13.0 MB/s eta 0:00:00\n",
+      "Downloading pydantic-2.10.1-py3-none-any.whl (455 kB)\n",
+      "Downloading pydantic_core-2.27.1-cp39-none-win_amd64.whl (2.0 MB)\n",
+      "   ---------------------------------------- 0.0/2.0 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 2.0/2.0 MB 22.1 MB/s eta 0:00:00\n",
+      "Downloading PyYAML-6.0.2-cp39-cp39-win_amd64.whl (162 kB)\n",
+      "Downloading statsmodels-0.14.4-cp39-cp39-win_amd64.whl (9.9 MB)\n",
+      "   ---------------------------------------- 0.0/9.9 MB ? eta -:--:--\n",
+      "   --------------- ------------------------ 3.9/9.9 MB 18.1 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 7.1/9.9 MB 16.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  9.7/9.9 MB 17.3 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.9/9.9 MB 13.9 MB/s eta 0:00:00\n",
+      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Downloading typeguard-4.4.1-py3-none-any.whl (35 kB)\n",
+      "Downloading visions-0.7.6-py3-none-any.whl (104 kB)\n",
+      "Downloading annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
+      "Downloading attrs-24.2.0-py3-none-any.whl (63 kB)\n",
+      "Downloading llvmlite-0.43.0-cp39-cp39-win_amd64.whl (28.1 MB)\n",
+      "   ---------------------------------------- 0.0/28.1 MB ? eta -:--:--\n",
+      "   ------- -------------------------------- 5.5/28.1 MB 27.9 MB/s eta 0:00:01\n",
+      "   -------------- ------------------------- 10.2/28.1 MB 23.6 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 16.0/28.1 MB 24.5 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 23.1/28.1 MB 26.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  28.0/28.1 MB 28.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 28.1/28.1 MB 22.3 MB/s eta 0:00:00\n",
+      "Downloading MarkupSafe-3.0.2-cp39-cp39-win_amd64.whl (15 kB)\n",
+      "Downloading networkx-3.2.1-py3-none-any.whl (1.6 MB)\n",
+      "   ---------------------------------------- 0.0/1.6 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 1.6/1.6 MB 22.3 MB/s eta 0:00:00\n",
+      "Downloading patsy-1.0.1-py2.py3-none-any.whl (232 kB)\n",
+      "Downloading pywavelets-1.6.0-cp39-cp39-win_amd64.whl (4.3 MB)\n",
+      "   ---------------------------------------- 0.0/4.3 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 4.3/4.3 MB 28.3 MB/s eta 0:00:00\n",
+      "Building wheels for collected packages: htmlmin\n",
+      "  Building wheel for htmlmin (setup.py): started\n",
+      "  Building wheel for htmlmin (setup.py): finished with status 'done'\n",
+      "  Created wheel for htmlmin: filename=htmlmin-0.1.12-py3-none-any.whl size=27091 sha256=afc9cb4b1162f10ac39a68a1232ca8fc1047d9e12ba593f5efdaad577ea09459\n",
+      "  Stored in directory: c:\\users\\jonam\\appdata\\local\\pip\\cache\\wheels\\1d\\05\\04\\c6d7d3b66539d9e659ac6dfe81e2d0fd4c1a8316cc5a403300\n",
+      "Successfully built htmlmin\n",
+      "Installing collected packages: htmlmin, tqdm, PyYAML, PyWavelets, pydantic-core, patsy, networkx, multimethod, MarkupSafe, llvmlite, dacite, attrs, annotated-types, typeguard, pydantic, numba, jinja2, imagehash, visions, statsmodels, phik, ydata-profiling\n",
+      "Successfully installed MarkupSafe-3.0.2 PyWavelets-1.6.0 PyYAML-6.0.2 annotated-types-0.7.0 attrs-24.2.0 dacite-1.8.1 htmlmin-0.1.12 imagehash-4.3.1 jinja2-3.1.4 llvmlite-0.43.0 multimethod-1.12 networkx-3.2.1 numba-0.60.0 patsy-1.0.1 phik-0.12.4 pydantic-2.10.1 pydantic-core-2.27.1 statsmodels-0.14.4 tqdm-4.67.1 typeguard-4.4.1 visions-0.7.6 ydata-profiling-4.12.0\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hegoi\\AppData\\Roaming\\Python\\Python39\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
    "source": [
-    "from ydata_profiling import ProfileReport"
+    "!pip install ydata-profiling"
    ]
   },
   {
@@ -5955,10 +6079,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Summarize dataset: 100%|██████████| 30/30 [00:01<00:00, 19.01it/s, Completed]                                   \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:01<00:00,  1.26s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.64it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 244.99it/s]\n"
+      "C:\\Users\\jonam\\AppData\\Roaming\\Python\\Python39\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ydata_profiling import ProfileReport"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Summarize dataset: 100%|██████████| 30/30 [00:02<00:00, 12.39it/s, Completed]                                   \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:01<00:00,  1.32s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:02<00:00,  2.15s/it]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 141.69it/s]\n"
      ]
     }
    ],
