--- a/3-Machine_Learning/3-Deep_Learning/1-Intro Deep Learning/ejercicios/Deep Learning classification.ipynb
+++ b/3-Machine_Learning/3-Deep_Learning/1-Intro Deep Learning/ejercicios/Deep Learning classification.ipynb
@@ -502,7 +502,7 @@
     "# Hidden layer\n",
     "modelo.add(keras.layers.Dense(units = 100,activation='relu'))\n",
     "#Definimos nuestra capa de salida\n",
-    "modelo.add(keras.layers.Dense(units = 10,activation='softmax'))"
+    "modelo.add(keras.layers.Dense(units = 10,activation='softmax')) #Para problemas multiclase"
    ]
   },
   {
